[package]
name = "rusqlite-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
rusqlite = { version = "0.29", features = ["chrono", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_rusqlite = "0.33"
thiserror = "1"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.17"
